--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<h4>My favorite color is Yellow.</h4>
 					<h4>My favorite food is Korean Food.</h4>
 					<h4>If I could be any animal, I would be an Eagle.</h4>
+                    <p>Cats are the best!</p>
 			</div>
 		  </body>
 		</html>
