--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 		  </head>
 		  <body>
 			<div align="center">
-				<h3 style="background-color:orange;">Hyojoon Kim</h3>
-                <h1>Hyojoon Kim</h1>
-				<h2>Software Developer</h2>
+				<h1 style="background-color:orange;">Hyojoon Kim</h1>
+				<h2 style="background-color: green;">Software Developer</h2>
 				<hr>
 				<h3>About Me:</h3>
 					<h4>My hometown is Incheon.</h4>
