Changing color of green

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<div align="center">
 				<h1 style="background-color:orange;">Hyojoon Kim</h1>
                 <hr>
-				<h2 style="background-color: green;">Software Developer</h2>
+				<h2 style="background-color: rgb(7, 172, 117);">Software Developer</h2>
 				<hr>
 				<h3>About Me:</h3>
 					<h4>My hometown is Incheon.</h4>
