Adding style to my webpage. It could give error

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width">
 			<title>My Profile</title>
+            <style>
+                body {
+                    background-color: darkslategrey;
+                    color: azure;
+                    font-size: 1.1em;
+                }
+                h1 {
+                    color: coral;
+                }
+                #intro {
+                    font-size: 1.3em;
+                }
+                .colorful {
+                    color: orange;
+                }
+            </style>
 		  </head>
 		  <body>
 			<div align="center">
-				<h1 style="background-color:orange;">Hyojoon Kim</h1>
+				<h1>Hyojoon Kim</h1>
                 <hr>
-				<h2 style="background-color: rgb(7, 172, 117);">Software Developer</h2>
+				<p id="intro">Software Developer</p>
 				<hr>
 				<h3>About Me:</h3>
 					<h4>My hometown is Incheon.</h4>
