changed background color to yellow

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<title>My Profile</title>
             <style>
                 body {
-                    background-color: darkslategrey;
+                    background-color: rgb(231, 224, 118);
                     color: azure;
                     font-size: 1.1em;
                 }
