changed the entire letter colors

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
             <style>
                 body {
                     background-color: rgb(231, 224, 118);
-                    color: azure;
+                    color: rgb(3, 92, 133);
                     font-size: 1.1em;
                 }
                 h1 {
-                    color: coral;
+                    color: rgb(161, 75, 5);
                 }
                 #intro {
                     font-size: 1.3em;
                 }
                 .colorful {
-                    color: orange;
+                    color: rgb(0, 71, 119);
                 }
             </style>
 		  </head>
@@ -27,12 +27,12 @@
                 <hr>
 				<p id="intro">Software Developer</p>
 				<hr>
-				<h3>About Me:</h3>
-					<h4>My hometown is Incheon.</h4>
-					<h4>My favorite color is Yellow.</h4>
-					<h4>My favorite food is Korean Food.</h4>
-					<h4>If I could be any animal, I would be an Eagle.</h4>
-                    <p>Cats are the best!</p>
+				<p class="colorful">About Me:</p>
+					<p class="colorful">My hometown is Incheon.</p>
+					<p class="colorful">My favorite color is Yellow.</p>
+					<p class="colorful">My favorite food is Korean Food.</p>
+					<p class="colorful">If I could be any animal, I would be an Eagle.</p>
+                    <p class="colorful">Cats are the best!</p>
 			</div>
 		  </body>
 		</html>
